Apply correct fonts and SVG colors, and adjust spacing [WEB-1595]

--- a/frontend/scss/print.scss
+++ b/frontend/scss/print.scss
@@ -15,9 +15,6 @@
 @import 'setup/variables';
 @import 'setup/colors';
 @import 'setup/mixins';
-
-$serif-font--loaded: 'Georgia', #{$serif-font};
-$sans-serif-font--loaded: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', #{$sans-serif-font};
 @import 'setup/typography';
 
 @import 'atoms/arrow-link';
@@ -45,15 +42,17 @@ header {
 
   .logo,
   .journal-logo {
-    width: 150px;
-    height: 150px;
+    width: 80px;
+    height: 80px;
     color: $color__black--54;
     margin-right: .5in;
     align-self: flex-end;
     svg {
       width: 100%;
       height: 100%;
-      fill: currentColor;
+      * {
+        color: $color__black--54;
+      }
     }
   }
   .issue-number{
@@ -459,7 +458,7 @@ img {
 
 /* Layout hero images in header */
 .m-article-header--feature .m-article-header__img {
-  width: 66%;
+  width: 100%;
   left: auto;
   height: auto;
   margin: .5in 0 0 0;
@@ -474,18 +473,20 @@ img {
 }
 
 /* Lay out title */
-.m-article-header--feature .m-article-header__text,
 .m-article-header {
   position: relative;
   padding: 0;
   width: 66%;
   min-height: auto;
-}
-
-.m-article-header {
   margin-top: .25in;
 }
 
+.m-article-header--feature .m-article-header__text {
+  position: relative;
+  padding: 0;
+  min-height: auto;
+  margin-top: .25in;
+}
 
 /* Lay out intro text */
 .o-article__intro {
